objects/geopointe__Layer__c.object
<CustomObject>
    <description>Stores information about custom layers that can be applied to the Geopointe Map.</description>
    <fields>
        <fullName>geopointe__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Control if this Layer is active and can be added to map by users.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Auto_Load__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, automatically load this layer when the Map page is opened.</inlineHelpText>
        <label>Auto Load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A short description for this layer.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__File_Extension__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Folder__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The folder to associate this layer with.</inlineHelpText>
        <label>Folder</label>
        <referenceTo>geopointe__GP_Folder__c</referenceTo>
        <relationshipLabel>Geopointe Layers</relationshipLabel>
        <relationshipName>Layers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>geopointe__Key__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Personal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this if the layer will only be used by you.</inlineHelpText>
        <label>Personal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>URL for the KML, KMZ, or GEORSS file.</inlineHelpText>
        <label>URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Geopointe Layer</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Layer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Layers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>